# os402

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
mcpb/: build.sh
src/: config.rs  lib.rs  logging.rs  main.rs  prelude.rs
src/cli/: config.rs  curl.rs  key.rs  mcp.rs  mod.rs  offer.rs  pay.rs  run.rs  sandbox.rs  shared.rs  task.rs
src/eth/: eip712.rs  mod.rs  network.rs  signer.rs  tokens.rs  usdc.rs
src/mcp/: budget.rs  gateway.rs  manifest.rs  mcp_client.rs  mod.rs  protocol.rs  tool.rs  x402_mcp.rs
src/os/: mod.rs  sandbox.rs  sluice.rs  task.rs  tasks.rs
src/webapp/: cleanup.rs  mod.rs  models.rs  offers.rs  pages.rs  router.rs  state.rs  trace.rs
src/webapp/handlers/: attest.rs  cgi.rs  exe.rs  execute.rs  health.rs  index.rs  mod.rs  offers.rs  output.rs  tasks.rs
src/x402/: README.md  auth.rs  client.rs  facilitator.rs  headers.rs  layer.rs  middleware.rs  mod.rs  paygate.rs  payment_page.rs  prefs.rs  timestamp.rs  types.rs
test/: .gitignore  Makefile  debug-facilitator.js  package.json  run-coverage.sh  test-client-debug.js  test-client.js  test-server.js
test/mcp/: Makefile
test/python/: .gitignore  Makefile  README.md
test/python/apploader/: __main__.py
test/python/example/: __main__.py
test/tiny-cgi/: .gitignore  Makefile  README.md  hello-aarch64.s  hello-x86_64.s
