[package]
name = "os402"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
opt-level = 2           # Good balance of size and performance
#lto = false
lto = "thin"            # Thin LTO: faster builds with parallel linking
codegen-units = 16      # Parallel codegen to benefit from thin LTO
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Smaller binary, no unwinding

# Keep debug symbols in release builds of dependencies (useful for profiling)
#[profile.release.package."*"]
#debug = true

[patch.crates-io]
reqwest = { path = "dependencies/reqwest" }

[dependencies]
# See: 'Turning off IDNA support' https://docs.rs/crate/idna_adapter/latest
idna_adapter = "=1.0.0"  # Pin to 1.0.0 to avoid heavy ICU dependencies
rawdogtpm2 = { path = "dependencies/lockboot/crates/rawdogtpm2" }
reqwest = { version = "=0.12.24", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "multipart", "json"] }
rustls = { version = "=0.23.23", default-features = false, features = ["std", "custom-provider"] }
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["std", "zeroize"] }
reqwest-middleware = "0.4"

axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "fs", "io-util", "process"] }
serde_json = "1.0.137"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rust_decimal = "1.37"
regex = "1.11"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
object = "0.36"
base64 = "0.22"
memfd = "0.6"
libc = "0.2"
indexmap = { version = "2.0", features = ["serde"] }
landlock = "0.4"
caps = "0.5"
tower = "0.5"
alloy-primitives = { version = "1", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa", "std"] }
async-trait = "0.1"
http = "1"
rand = "0.8"
thiserror = "2.0"
once_cell = "1.21.3"
paste = "1.0"
schemars = "0.8"

# Tracing and logging
# release_max_level_info compiles out debug!/trace! calls in release builds (zero cost)
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
